--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html>
-	<head>
+<head>
 		<script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
 		<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.4.9/aframe/build/aframe-ar.js"></script>
 	</head>
 	<body style="margin: 0;overfiow: hidden;">
-		<a-scene>
-			<a-box position="0 0 0"
+		<a-scene embedded
+			 arjs="matrixCodeType: 3x3;"
+			 vr-mode-ui="enabled: false">
+			<a-marker type="barcode" value="5">
+			<a-box position="0 0.5 0"
 			  material="color: blue;">
-			</a-box>
-			<a-box position="0 2 0"
-			  material="color: red;">
 			</a-box>
 			<a-camera>
 			</a-camera>
