--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 		arjs="detectionMode: mono_and_matrix;
 		      matrixCodeType: 3x3;"
 		vr-mode-ui="enabled: false">
+		<a-marker type="barcode" value="3">
+			<a-image src=123.jpg"></a-image>
+		</a-marker>
 		<a-marker type="barcode" value="5">
-		<a-box position="0 0.5 0"
-	        material="color: blue;">
-		</a-box>
+			<a-box position="0 0.5 0"
+	       		 material="color: blue;">
+			</a-box>
+		</a-marker>
 		<a-camera>
 		</a-camera>
 	    </a-scene>	
